templates/sidecar-injector_template.yaml
---
# Source: sidecar-injector/templates/controlnode.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-controlnode
  labels:
    helm.sh/chart: sidecar-injector-0.19.0
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
    app.kubernetes.io/version: "0.19.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7946
      targetPort: 7946
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
---
# Source: sidecar-injector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-sidecar-injector
  labels:
    helm.sh/chart: sidecar-injector-0.19.0
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.19.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: release-name
---
# Source: sidecar-injector/templates/controlnode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-controlnode
  labels:
    helm.sh/chart: sidecar-injector-0.19.0
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
    app.kubernetes.io/version: "0.19.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sidecar-injector
      app.kubernetes.io/instance: "controlnode"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sidecar-injector
        app.kubernetes.io/instance: "controlnode"
    spec:
      serviceAccountName: release-name-sidecar-injector
      securityContext:
        {}
      containers:
        - name:  controlnode
          securityContext:
            {}
          image: "impartsecurity/control-node:0.19.0"
          imagePullPolicy: IfNotPresent
          args:
          - --gossip_port=7946
          resources:
            {}
          volumeMounts: []
      volumes: []
---
# Source: sidecar-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-sidecar-injector
  labels:
    helm.sh/chart: sidecar-injector-0.19.0
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.19.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sidecar-injector
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/webhook-tls-config: a6920aeb803ba02a5efbe97ee3bc2243a79bc368441005c0fd044c13b1b91bf5
        checksum/webhook-tls-config-c: 6d22338dc94753b78b0f3346d65ced7d3f14ed9dfa874aea0eb701ac42ac7754
        checksum/webhook-tls-config-k: 253ef5b972140b5539cc36f79cf518bfae5c8e626de4337771b36a973de6edae
        checksum/values: dd1a548617134a45423daefb4a74635ddf0fdeea7cb80f207b968e7afc7eda95
        checksum/webhook-sidecar-config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: sidecar-injector
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-sidecar-injector
      securityContext:
        {}
      containers:
        - name: sidecar-injector
          securityContext:
            {}
          image: "impartsecurity/k8s-webhook-injector:0.19.0"
          imagePullPolicy: IfNotPresent
          args:
          - --sidecar-config-file=/etc/webhook/config/sidecarconfig.yaml
          - --tls-cert-file=/etc/webhook/certs/tls.crt
          - --tls-private-key-file=/etc/webhook/certs/tls.key
          resources:
            {}
          volumeMounts:
          - mountPath: /etc/webhook/config
            name: webhook-config
          - name: certs
            mountPath: /etc/webhook/certs
            readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: release-name-sidecar-injector-webhook-tls
      - configMap:
          name: release-name-sidecar-injector
        name: webhook-config
---
# Source: sidecar-injector/templates/deployment.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-sidecar-injector
webhooks:
  - name: release-name-sidecar-injector.impart.security
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: release-name-sidecar-injector
        namespace: default
        path: /inject
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lRSVNZMkhZUDJMdko3N2ZMdnhGQ3MrekFOQmdrcWhraUc5dzBCQVFzRkFEQVYKTVJNd0VRWURWUVFERXdwa1pXWmhkV3gwTFdOaE1CNFhEVEkwTURVeE5UQTRNVEl3T0ZvWERUTTBNRFV4TXpBNApNVEl3T0Zvd0ZURVRNQkVHQTFVRUF4TUtaR1ZtWVhWc2RDMWpZVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTWlQQjBrM0lOaUZJeld1U1psVzhFWS94SlorSmlmNGlqNlFnVVUydEM5eWVLeVMKS1ZsdmlnZnV4a1dHTTBmT0xydmw2VHNZakZTakgxR0pNTVMyWnZFL0U2UlZobHdnU3hHZHBJTzdGd0xIYWhMawpna1VETnY5UHFj [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources:
          - pods
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        impart-inspector-injection: enabled
---
# Source: sidecar-injector/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-sidecar-injector-test-connection"
  labels:
    helm.sh/chart: sidecar-injector-0.19.0
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.19.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: nc
      image: busybox
      command: ['sh', '-c']
      args:
        - "nc -zvw 5 release-name-sidecar-injector 443"
  restartPolicy: Never
